--- a/summary.html
+++ b/summary.html
@@ -12,6 +12,7 @@
     <script src="./js/index.js" defer></script>
     <script src="js/navBar.js" defer></script>
     <script src="js/summary.js"></script>
+    <script src="js/header.js"></script>
   </head>
   <body onload="init(), start()">
     <!--  -->
