fixed popup links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
     <script src="./js/index.js" defer></script>
+    <script src="js/header.js"></script>
 </head>
 <body onload="initLogIn()">
     <img class="posAbsolute logoSlideIn" src="./img/joinLogoBig.png" alt="Join-Logo">
