--- a/legalNotice.html
+++ b/legalNotice.html
@@ -6,6 +6,7 @@
     <title>Legal Notice</title>
     <script src="/js/navBar.js"></script>
     <link rel="stylesheet" href="/styles/legalNotice.css">
+    <script src="js/header.js"></script>
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
