--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -6,6 +6,7 @@
     <title>Privacy Policy</title>
     <script src="/js/navBar.js"></script>
     <link rel="stylesheet" href="/styles/privacyPolicy.css">
+    <script src="js/header.js"></script>
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
