--- a/board.html
+++ b/board.html
@@ -15,6 +15,7 @@
     <script src="./js/navBar.js" defer></script>
     <script src="./templates/HTMLTemplatesBoard.js" defer></script>
     <script src="./js/board.js" defer></script>
+    <script src="js/header.js"></script>
 
 </head>
 <body onload="initBoard()">
