--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,7 @@
     <script src="/js/navBar.js"></script>
     <script src="/js/contacts.js"></script>
     <script src="/js/contacts-html.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body onload="init(), initContacts()">
     <div w3-include-html="/templates/navBar.html"></div>
