--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,10 @@
         <div class="right-side">
             <div class="right-side-infos">
                 <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
-                <div id="show-contact-infos"></div>
+                <div id="show-contact-infos" class="hide-contact-infos"></div>
+                <div id="successfully-created" class="successfully-created">Contact successfully created</div>
+                <div id="successfully-deleted" class="successfully-deleted">Contact successfully deleted</div>
+                <div id="successfully-saved" class="successfully-saved">Contact successfully saved</div>
             </div>
         </div>
     </div> 
