--- a/summary.html
+++ b/summary.html
@@ -118,14 +118,12 @@
               </a>
             </div>
           </div>
-
         </div>
       </div>
       <div class="greet-container">
-        <div class="fs-47 fw-500 greeting greeting-content" id="greeting">
-          Good afternoon <span id="greetingNameContainer" class="greetingName"></span>
-        </div>
-        <div class="name-container name" id="name"></div>
+        <div class="fs-47 fw-500 greeting greeting-content" id="greeting"></div>
+
+        <div class="name-container name" id="name"><span id="greetingNameContainer" class="greetingName"></span></div>
       </div>
     </div>
     <!--  -->
