--- a/addTask.html
+++ b/addTask.html
@@ -9,6 +9,7 @@
     <script src="/js/navBar.js"></script>
     <script src ="../js/addTask.js"></script>
     <script src="js/header.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
   <body onload="init(), includeHTML()">
   <div w3-include-html="/templates/navBar.html"></div>
