--- a/board.html
+++ b/board.html
@@ -16,6 +16,7 @@
     <script src="./templates/HTMLTemplatesBoard.js" defer></script>
     <script src="./js/board.js" defer></script>
     <script src="js/header.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 
 </head>
 <body onload="initBoard()">
