--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
     <script src="/js/contacts.js"></script>
     <script src="/js/contacts-html.js"></script>
     <script src="js/header.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="init(), initContacts()">
     <div w3-include-html="/templates/navBar.html"></div>
