--- a/legalNotice.html
+++ b/legalNotice.html
@@ -7,6 +7,7 @@
     <script src="/js/navBar.js"></script>
     <link rel="stylesheet" href="/styles/legalNotice.css">
     <script src="js/header.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
