--- a/register.html
+++ b/register.html
@@ -10,6 +10,7 @@
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
     <script src="./js/index.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="initRegister()">
     <dialog></dialog>
