--- a/summary.html
+++ b/summary.html
@@ -13,6 +13,7 @@
     <script src="js/navBar.js" defer></script>
     <script src="js/summary.js"></script>
     <script src="js/header.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
   </head>
   <body onload="init(), start()">
     <!--  -->
