--- a/addTask.html
+++ b/addTask.html
@@ -6,9 +6,13 @@
     <title>AddTask</title>
     <link rel="stylesheet" href="../styles/addTask.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <script src="/js/navBar.js"></script>
-    <script src ="../js/addTask.js"></script>
-    <script src="js/header.js"></script>
+    <script src="./js/storageToken.js" defer></script>
+    <script src="./js/storage.js" defer></script>
+    <script src="./js/register.js" defer></script>
+    <script src="./js/index.js" defer></script>
+    <script src="/js/navBar.js" defer></script>
+    <script src ="../js/addTask.js" defer></script>
+    <script src="js/header.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
   <body onload="init(), includeHTML()">
