--- a/addTask.html
+++ b/addTask.html
@@ -15,7 +15,7 @@
     <script src="js/header.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
-  <body onload="init(), includeHTML()">
+  <body onload="initAddTask()">
   <div w3-include-html="/templates/navBar.html"></div>
   <div w3-include-html="/templates/header.html"></div>
   <div w3-include-html="/templates/addTaskTemplate.html"></div>
