--- a/board.html
+++ b/board.html
@@ -14,9 +14,9 @@
     <script src="./js/index.js" defer></script>
     <script src="./js/navBar.js" defer></script>
     <script src="./templates/HTMLTemplatesBoard.js" defer></script>
-    <script src="./js/board.js" defer></script>
     <script src="./js/addTask.js" defer></script>
-    <script src="js/header.js"></script>
+    <script src="./js/board.js" defer></script>
+    <script src="./js/header.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 
 </head>
