--- a/contacts.html
+++ b/contacts.html
@@ -24,6 +24,7 @@
         <div class="left-side">
             <div class="add-button"><button class="button1" onclick="addNewContact()">Add new contact</button></div>
             <div id="contact-area" class="contact-area"></div>
+            <div class="add-button-mobile"><img onclick="addNewContact()" src="/img/person_add.png" alt=""></div>
         </div>
 
         <div class="right-side">
