Contact Page Responsive

--- a/contacts.html
+++ b/contacts.html
@@ -29,7 +29,7 @@
 
         <div class="right-side" id="right-side">
             <img onclick="backToList()" class="arrow" src="/img/arrow-left-line.png" alt="">
-            <div class="right-side-infos">
+            <div class="right-side-infos" id="right-side-infos">
                 <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
                 <div id="blue-underline" class="d-none"><img src="./img/blue-underline.png"></div>
                 <div id="show-contact-infos" class="hide-contact-infos"></div>
