summary half counters finished

--- a/summary.html
+++ b/summary.html
@@ -13,6 +13,7 @@
     <script src="js/navBar.js" defer></script>
     <script src="js/summary.js"></script>
     <script src="js/header.js"></script>
+    <script src="js/board.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
   </head>
   <body onload="init(), start()">
@@ -39,7 +40,7 @@
                       </div>
                     </div>
                     <div>
-                      <div class="fs-64 fw-600 center-text" id="toDo">0</div>
+                      <div class="fs-64 fw-600 center-text" id="toDoContainer">0</div>
                       <div class="fs-20">To-do</div>
                     </div>
                   </div>
