finished summary task counters

--- a/summary.html
+++ b/summary.html
@@ -85,7 +85,7 @@
                       </div>
                     </div>
                     <div>
-                      <div class="fs-64 fw-600 center-text" id="high">2</div>
+                      <div class="fs-64 fw-600 center-text" id="urgent">0</div>
                       <div class="fs-16">Urgent</div>
                     </div>
                   </div>
