not filling required fields now prevents creating a task

--- a/addTask.html
+++ b/addTask.html
@@ -18,5 +18,6 @@
   <body onload="initAddTask()">
   <div w3-include-html="/templates/navBar.html"></div>
   <div w3-include-html="/templates/header.html"></div>
-  <div w3-include-html="/templates/addTaskTemplate.html"></div>
+  
+  <form id="taskForm"><div w3-include-html="/templates/addTaskTemplate.html"></div></form>
 </body>
