--- a/summary.html
+++ b/summary.html
@@ -14,6 +14,7 @@
     <script src="js/summary.js"></script>
     <script src="js/header.js"></script>
     <script src="js/board.js"></script>
+ <script src="js/addTask.js"></script>
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
   </head>
