Help, Privacy Policy, LegalNotice Responsive & Back Button

--- a/legalNotice.html
+++ b/legalNotice.html
@@ -13,7 +13,7 @@
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="legal-notice-container">
-        <a href="contacts.html"><img class="arrow" src="/img/arrow-left-line.png" alt=""></a>
+        <img onclick="history.back()" class="arrow" src="/img/arrow-left-line.png" alt="">
         <h1>Legal Notice</h1>
         <h2>Imprint</h2>
         <p>
