--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -12,7 +12,7 @@
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
-    <a href="contacts.html"><img class="arrow" src="/img/arrow-left-line.png" alt=""></a>
+    <img onclick="history.back()" class="arrow" src="/img/arrow-left-line.png" alt="">
     <div class="privacy-policy-container">
         <h1>Privacy Policy</h1>
         <h2>1. Privacy Policy at a Glance</h2>
