--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@
     <script src="./js/index.js" defer></script>
     <script src="./js/navBar.js" defer></script>
     <script src="./templates/HTMLTemplatesBoard.js" defer></script>
+    <script src="./js/summary.js" defer></script>
     <script src="./js/addTask.js" defer></script>
     <script src="./js/board.js" defer></script>
     <script src="./js/header.js" defer></script>
