change login checkbox value rememberMe

--- a/addTask.html
+++ b/addTask.html
@@ -10,6 +10,7 @@
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
     <script src="./js/index.js" defer></script>
+    <script src="./js/summary.js" defer></script>
     <script src="/js/navBar.js" defer></script>
     <script src ="../js/addTask.js" defer></script>
     <script src="js/header.js" defer></script>
