--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
     <script src="./js/index.js" defer></script>
+    <script src="./js/summary.js" defer></script>
     <script src="/js/navBar.js"></script>
     <script src="/js/contacts.js"></script>
     <script src="/js/contacts-html.js"></script>
