--- a/summary.html
+++ b/summary.html
@@ -18,7 +18,7 @@
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
   </head>
-  <body onload="init(), start()">
+  <body onload="start()">
     <!--  -->
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
