--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="./js/register.js" defer></script>
     <script src="./js/index.js" defer></script>
     <!-- <script src="js/header.js"></script>
-    <script src="js/summary.js"></script> -->
+  -->
+  <script src="js/summary.js"></script> 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="initLogIn()">
