add another 'taskWrapper'

--- a/board.html
+++ b/board.html
@@ -70,6 +70,13 @@
                 </div>
             </div>
         </div> -->
+
+        <!-- <div class="taskWrapper">
+            <div ondragleave="hideEmptyDiv('divToDo')" ondragover="allowDrop(event), showEmptyDiv('divToDo')" ondrop="moveTo('toDo')" id="divToDo" class="column"></div>
+            <div ondragleave="hideEmptyDiv('divInProgress')" ondragover="allowDrop(event), showEmptyDiv('divInProgress')" ondrop="moveTo('inProgress')" id="divInProgress" class="column"></div>
+            <div ondragleave="hideEmptyDiv('divAwaitFeedback')" ondragover="allowDrop(event), showEmptyDiv('divAwaitFeedback')" ondrop="moveTo('awaitFeedback')" id="divAwaitFeedback" class="column"></div>
+            <div ondragleave="hideEmptyDiv('divDone')" ondragover="allowDrop(event), showEmptyDiv('divDone')" ondrop="moveTo('done')" id="divDone" class="column"></div>
+        </div> -->
     
         <div class="taskWrapper">
             <div class="progressBar">
