--- a/board.html
+++ b/board.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 
 </head>
-<body onload="initBoard()">
+<body class="boardBody" onload="initBoard()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="main-board-container">
