summary css fix

--- a/summary.html
+++ b/summary.html
@@ -92,11 +92,11 @@
                     </div>
                   </div>
                   <div class="line"></div>
-                  <div>
-                    <div class="fw-700 fs-2 pb-13" id="deadline">
+                  <div class="deadline-wrapper">
+                    <div class="deadline fw-700 fs-2 pb-13" id="deadline">
                       29. Februar 2024
                     </div>
-                    <div class="fs-16">Upcoming Deadline</div>
+                    <div class="deadline fs-16">Upcoming Deadline</div>
                   </div>
                 </div>
               </a>
